force-app/main/default/objects/fboost__B_Feature__mdt/fboost__B_Feature__mdt.object-meta.xml
<CustomObject>
    <description>Feature Toggle functionality that allows disabling/enabling different system functions</description>
    <label>Boost Feature Toggle</label>
    <pluralLabel>Boost Feature Toggles</pluralLabel>
</CustomObject>