force-app/main/default/objects/fboost__B_Feature__mdt/fields/fboost__CustomPermission__c.field-meta.xml
<CustomField>
    <fullName>fboost__CustomPermission__c</fullName>
    <description>The custom permission API name. Availability depends on the Custom Permission assignment</description>
    <inlineHelpText>The custom permission API name. Availability depends on the Custom Permission assignment</inlineHelpText>
    <label>Custom Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>