force-app/main/default/objects/fboost__B_Feature__mdt/fields/fboost__Enabled__c.field-meta.xml
<CustomField>
    <fullName>fboost__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determine if a feature is enabled.</description>
    <inlineHelpText>Determine if a feature is enabled.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>