force-app/main/default/objects/fboost__B_Feature__mdt/fields/fboost__FeatureEnvironment__c.field-meta.xml
<CustomField>
    <fullName>fboost__FeatureEnvironment__c</fullName>
    <description>Determines in which environment Feature will be activated</description>
    <inlineHelpText>Determines in which environment Feature will be activated</inlineHelpText>
    <label>Feature Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Sandboxes Only</fullName>
            </value>
            <value>
                <fullName>Production Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>