force-app/main/default/objects/fboost__B_Feature__mdt/fields/fboost__FeatureFlag__c.field-meta.xml
<CustomField>
    <fullName>fboost__FeatureFlag__c</fullName>
    <description>The name of the Boost Feature Flag Hierarchical Custom Setting checkbox field. Feature availability will depend on the field value.</description>
    <inlineHelpText>The name of the Boost Feature Flag Hierarchical Custom Setting checkbox field. Feature availability will depend on the field value.</inlineHelpText>
    <label>Feature Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>