force-app/main/default/objects/fboost__B_Feature__mdt/fields/fboost__UseFeatureToggleServicePlugin__c.field-meta.xml
<CustomField>
    <fullName>fboost__UseFeatureToggleServicePlugin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Availability depends on the BoostPlugins.FeatureToggleService results</description>
    <inlineHelpText>Availability depends on the BoostPlugins.FeatureToggleService results</inlineHelpText>
    <label>Use Feature Toggle Service Plugin</label>
    <type>Checkbox</type>
</CustomField>