force-app/main/default/objects/fboost__B_Feature__mdt/validationRules/fboost__RequiredFeatureToggleServiceDefinition.validationRule-meta.xml
<ValidationRule>
    <fullName>fboost__RequiredFeatureToggleServiceDefinition</fullName>
    <active>true</active>
    <errorConditionFormula>fboost__UseFeatureToggleServicePlugin__c = true &amp;&amp; ISBLANK($Setup.fboost__B_BoostSettings__c.fboost__FeatureToggleService__c)</errorConditionFormula>
    <errorDisplayField>fboost__UseFeatureToggleServicePlugin__c</errorDisplayField>
    <errorMessage>Please provide the name of the class which implements BoostPlugins.FeatureToggleService in the BoostSettings.FeatureToggleService__c</errorMessage>
</ValidationRule>